<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/clear"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textColorHighlight="@color/black"
                android:textColorLink="#121111"
                android:textSize="35sp"
                tools:ignore="ExtraText,ObsoleteLayoutParam"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />
            <Button
                android:id="@+id/button_bracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/bracket"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="35sp"
                tools:ignore="ObsoleteLayoutParam"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button_equal_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/equal_to"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@layout/button_shape"
                android:contentDescription="@string/back"
                android:scrollbarThumbHorizontal="@color/black"
                android:scrollbarThumbVertical="@color/black"
                app:srcCompat="@drawable/abc_vector_test"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />





        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/seven"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/eight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/nine"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />
            <Button
                android:id="@+id/button_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/five"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/six"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />
            <Button
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />
            <Button
                android:id="@+id/button_double_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/double_zero"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:ignore="ObsoleteLayoutParam"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />


            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/button_shape"
                android:gravity="center"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="35sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

        </TableRow>


    </TableLayout>
    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="textEnd"
        android:textColor="#EF8851"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textAlignment="textEnd"
        android:textColor="#FF5900"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#8A5934" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>